fix the issues brough up by TSE. The commit fixes the icon alignment issues, duplicate about video description and lack of divider on first video.. This commit improves the general UI/UX of the entire page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,10 @@
     height: 72px;
 }
 .left {
-    /* align-self: left; */
     display: flex;
     align-items: center;
 }
 .center {
-    /* align-self: center; */
     width: 100%;
     display: flex;
     align-items: center;
@@ -23,6 +21,10 @@
 #search-input {
     height: 36px;
     width: 90%;
+    outline: none;
+}
+#search-input:focus {
+    outline: none;
 }
 #search-btn {
     height: 36px;
@@ -33,13 +35,11 @@
     background: #f8f8f8;
 }
 .right {
-    /* align-self: flex-end; */
     height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    
+    justify-content: flex-end; 
 }   
 img {
     height: auto;
@@ -59,58 +59,40 @@ img {
     width: 84px;
     margin-right: 20px;
 }
-
 main {
     display: grid;
     grid-template-columns: 1.2fr .8fr; 
     background-color: #f9f9f9;
 }
-
 section {
     padding: 20px 10px;
-    /* width: 500px; */
 }
 .current_video {
     width: 100%;
 }
-
 section > div {
     padding: 20px 0px 20px 0px;
 }
-
 aside {
-    /* margin: 20px 20px 0px 20px; */
     padding-left: 20px;
 }
-
 .related_video {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 10px;
-    /* width: 100%; */
 }
-
 .related_video > div {
     padding-left: 20px;
 }
-
 .related_video > div > p {
     padding-right: 20px;
 }
-
 p {
     padding-top: 5px;
 }
-
 .rating {
-
-    margin-top: 20px 20px 0px 0px;
-    /* border-bottom: 1px #cccccc solid; */
-
-    
+    margin: 20px 20px 0px 0px  
 }
-
-
 .description {
     border-bottom: 1px #cccccc solid;
     display: flex;
@@ -123,9 +105,7 @@ p {
     width: 80%;
 }
 .description > div > p {
-
     padding-bottom: 20px;
-
 }
 .comments {
     width: 100%;
@@ -136,8 +116,6 @@ p {
     display: flex;
     justify-content: space-evenly;
 }
-
-
 a {
     padding-top: 20px;
     text-decoration: none;
@@ -178,7 +156,6 @@ ul {
     width: fit-content;
     padding-top: 20px;
     margin-right: 20px;
-
 }
 
 .autoplay > h6 {
@@ -242,7 +219,7 @@ ul {
     margin-bottom: 10px;
 }
 .video-title {
-    padding-bottom: 1;
+    padding-bottom: 10px;
 }
 .video-actions {
     display: flex;
@@ -256,11 +233,18 @@ ul {
 }
 .share {
     display: flex;
-    align-items: baseline;
+    align-items: center;
+    margin: auto;
 }
+    
+
 .sentiments {
     text-align: right;
 }
+.sentiments > * {
+    align-items: flex-end;
+}
+
 /* STYLING PROFILE PICTURES */
 .profile_avatar {
     width: 48px;
@@ -268,10 +252,7 @@ ul {
 #comment_avatar {
     width: 72px;
     height: 72px;
-    /* border-radius: 25%; */
 }
-
-
 .current-video-show-more {
     text-align: center;
     text-transform: uppercase;
@@ -286,4 +267,7 @@ ul {
 
 hr {
     margin: 10px 0px;
+}
+.video-boundary {
+    width: 90%;
 }
